# BoardGameBench

./: .env.example  .gitignore  CLAUDE.md  CONVENTIONS.md  DESIGN.md  README.md  alembic.ini  config.py  generate_migration.py  init_postgres.py  pyproject.toml
bgbench/: __init__.py  arena.py  bayes_rating.py  config_loader.py  export.py  game.py  game_runner.py  game_view.py  init_db.py  llm.py  llm_integration.py  llm_player.py  logging_config.py  main.py  match_state.py  migrate_db.py  models.py  moves.py  nim_game.py  rating.py  scheduler.py  serialization.py  utils.py
bgbench/data/: init_db.py  migrate_db.py  models.py
bgbench/experiment/: arena.py  export.py  rating.py  scheduler.py
bgbench/games/: __init__.py  azul_game.py  backgammon_game.py  battleship_game.py  cant_stop_game.py  chess_game.py  guess_who_game.py  love_letter_game.py  nim_game.py  poker_game.py  poker_types.py  reversi_game.py  scrabble_game.py  war_game.py
bgbench/llm/: integration.py  player.py
bgbench/match/: runner.py  state_manager.py  view.py
docs/: AZUL.md  CHAIN_OF_THOUGHT.md  DB_DESIGN.md  EXPERIMENT_CONFIG.md  GAME_CONTRIBUTIONS.md  GAME_STATUS.md  GUESS_WHO.md  POSTGRES.md  PYDANTIC_TEST.md  RATING.md  RESUMABLE_MATCHES.md  SCRABBLE.md
examples/: experiment_config.yaml
migrations/: add_complete_field.sql  add_model_config.sql  env.py
migrations/versions/: 3bc91ed9e74d_initial_postgresql_schema.py  50285f1003de_add_cascade_delete_to_foreign_keys.py  53a872cbf88e_add_error_information_for_llm_.py  add_cascade_deletion.py  b20f910fb6ce_rename_gamestate_to_matchstate_and_.py  f6b2c7906dcd_add_match_state_id_to_llminteraction.py  fe14bc41a0e3_merge_migration_heads.py
players/: haiku_grid.json
tests/: conftest.py  test_arena.py  test_arena_resumption.py  test_azul_game.py  test_battleship_game.py  test_bayes_rating.py  test_cant_stop_game.py  test_chess_game.py  test_config_loader.py  test_experiment_management.py  test_export.py  test_guess_who_game.py  test_llm.py  test_llm_error_tracking.py  test_llm_player.py  test_love_letter_game.py  test_match_state.py  test_match_state_manager.py  test_models.py  test_nim_game.py  test_poker_game.py  test_prompt_styles.py  test_scheduler.py  test_scrabble_game.py  test_war_game.py
tests/experiment/: test_arena.py  test_arena_resumption.py  test_bayes_rating.py  (+2 more)
(+14 files in other folders)
